--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wymp/boilerplate",
-  "version": "1.0.0-beta1",
+  "version": "1.0.0-rc1",
   "description": "A collection of boilerplates to make project creation easier",
   "scripts": {
     "test": ">&2 echo 'E: No tests specified'; exit 1",
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/wymp/ts-boilerplate#readme",
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10.0.0"
   },
   "dependencies": {
     "@types/node": "^14.18.0"
