--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wymp/boilerplate",
-  "version": "1.0.0-rc1",
+  "version": "1.0.0",
   "description": "A collection of boilerplates to make project creation easier",
   "scripts": {
     "test": ">&2 echo 'E: No tests specified'; exit 1",
@@ -27,10 +27,9 @@
   "engines": {
     "node": ">=10.0.0"
   },
-  "dependencies": {
-    "@types/node": "^14.18.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@types/node": "^14.18.0",
     "husky": "^6.0.0",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.2",
