--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wymp/boilerplate",
-  "version": "1.2.0",
+  "version": "1.2.3",
   "description": "A collection of boilerplates to make project creation easier",
   "scripts": {
     "test": ">&2 echo 'E: No tests specified'; exit 1",
@@ -17,12 +17,12 @@
     "boilerplate",
     "templates"
   ],
-  "author": "Kael Shipman",
-  "contributors": "Various Contributors (https://github.com/wymp/ts-boilerplate/graphs/contributors)",
+  "author": "Kael Shipman <kael.shipman@gmail.com>",
+  "contributors": [
+    "Various Contributors (https://github.com/wymp/ts-boilerplate/graphs/contributors)"
+  ],
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/wymp/ts-boilerplate/issues"
-  },
+  "bugs": "https://github.com/wymp/ts-boilerplate/issues",
   "homepage": "https://github.com/wymp/ts-boilerplate#readme",
   "engines": {
     "node": ">=10.0.0"
